[tool.poetry]
name = "mexc-signal-bot"
version = "0.1.0"
description = "MEXC futures signal bot with Telegram notifications"
authors = ["muhammet"]
readme = "README.md"
packages = [{include = "bot"}, {include = "services"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
aiohttp = "^3.12.0"
python-dotenv = "^1.1.0"
numpy = "^2.3.0"
matplotlib = "^3.10.0"
aiosignal = "^1.4.0"
pytest-cov = "^7.0.0"
websockets = "^15.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
black = "^25.9.0"
ruff = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
